{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 239,
  "lineage": "303a59e6-2196-1ab6-b399-ad8afb28e613",
  "resources": [
    {
      "module": "module.crictracker_eip_az_a",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f6aba0722d2585a",
            "association_id": "eipassoc-009d3df314d16f783",
            "domain": "vpc",
            "id": "eipalloc-00f6aba0722d2585a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-033df84945bf1a711",
            "private_dns": "ip-10-0-255-47.ap-south-1.compute.internal",
            "private_ip": "10.0.255.47",
            "public_dns": "ec2-13-233-79-9.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.79.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-az-a"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-az-a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_elasticache_redis_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:security-group/sg-077c8b97daab96804",
            "description": "Security Group for Elacticache Redis",
            "egress": [],
            "id": "sg-077c8b97daab96804",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/18",
                  "10.0.64.0/18",
                  "10.0.128.0/18"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "elasticache_redis_security_group",
            "name_prefix": "",
            "owner_id": "693583001687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "elasticache_redis_security_group",
              "Purpose": "k8s pods can access redis DB"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "elasticache_redis_security_group",
              "Purpose": "k8s pods can access redis DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:internet-gateway/igw-007aa2c81eab723a0",
            "id": "igw-007aa2c81eab723a0",
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_internet_route_internet_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "main_gateway_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-007aa2c81eab723a0",
            "id": "r-rtb-0db5128a7b23cb3701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db5128a7b23cb370",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_route_table_public.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_internet_route_nat_gateway_az_a",
      "mode": "managed",
      "type": "aws_route",
      "name": "main_nat_gateway_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-087178b19d418dfea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b20f5a5d811b59c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-087178b19d418dfea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_eip_az_a.aws_eip.main",
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_nat_gateway_az_a.aws_nat_gateway.main",
            "module.crictracker_public_subnet_az_a.aws_subnet.main",
            "module.crictracker_route_table_private_az_a.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_internet_route_nat_gateway_az_b",
      "mode": "managed",
      "type": "aws_route",
      "name": "main_nat_gateway_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d64df6939a0274d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b20f5a5d811b59c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d64df6939a0274d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_eip_az_a.aws_eip.main",
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_nat_gateway_az_a.aws_nat_gateway.main",
            "module.crictracker_public_subnet_az_a.aws_subnet.main",
            "module.crictracker_route_table_private_az_b.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_internet_route_nat_gateway_az_c",
      "mode": "managed",
      "type": "aws_route",
      "name": "main_nat_gateway_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2bab692b2a1c31e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b20f5a5d811b59c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2bab692b2a1c31e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_eip_az_a.aws_eip.main",
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_nat_gateway_az_a.aws_nat_gateway.main",
            "module.crictracker_public_subnet_az_a.aws_subnet.main",
            "module.crictracker_route_table_private_az_c.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_nat_gateway_az_a",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f6aba0722d2585a",
            "connectivity_type": "public",
            "id": "nat-0b20f5a5d811b59c0",
            "network_interface_id": "eni-033df84945bf1a711",
            "private_ip": "10.0.255.47",
            "public_ip": "13.233.79.9",
            "subnet_id": "subnet-077b67cb6983824ae",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-az-a"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-az-a"
            }
          },
          "dependencies": [
            "module.crictracker_eip_az_a.aws_eip.main",
            "module.crictracker_internet_gateway.aws_internet_gateway.main",
            "module.crictracker_public_subnet_az_a.aws_subnet.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_private_subnet_az_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-09e12eb496c2fad91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-09e12eb496c2fad91",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-a"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-a"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_private_subnet_az_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-0542e89a8e4d3a2ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-0542e89a8e4d3a2ad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-b"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-b"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_private_subnet_az_c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-02571039cf442c0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-02571039cf442c0e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-c"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-c"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_public_subnet_az_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-077b67cb6983824ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.255.0/24",
            "id": "subnet-077b67cb6983824ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-a"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-a"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_public_subnet_az_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-079a2bebf229cbae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.254.0/24",
            "id": "subnet-079a2bebf229cbae2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-b"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-b"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_public_subnet_az_c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:subnet/subnet-0b356724e236a1975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.253.0/24",
            "id": "subnet-0b356724e236a1975",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-c"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public-az-c"
            },
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_rds_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:security-group/sg-0736c543a02a96c67",
            "description": "Private connectivity to RDS DBs",
            "egress": [],
            "id": "sg-0736c543a02a96c67",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/18",
                  "10.0.64.0/18",
                  "10.0.128.0/18"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "crictracker_security_group",
            "name_prefix": "",
            "owner_id": "693583001687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker_security_group",
              "Purpose": "k8s pods can access rds instance"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker_security_group",
              "Purpose": "k8s pods can access rds instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_private_subnet_az_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1bbec4fc78e366c",
            "route_table_id": "rtb-087178b19d418dfea",
            "subnet_id": "subnet-09e12eb496c2fad91"
          },
          "dependencies": [
            "module.crictracker_private_subnet_az_a.aws_subnet.main",
            "module.crictracker_route_table_private_az_a.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_private_subnet_az_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef55746865f2646f",
            "route_table_id": "rtb-07d64df6939a0274d",
            "subnet_id": "subnet-0542e89a8e4d3a2ad"
          },
          "dependencies": [
            "module.crictracker_private_subnet_az_b.aws_subnet.main",
            "module.crictracker_route_table_private_az_b.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_private_subnet_az_c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2d949892e4f60f6",
            "route_table_id": "rtb-0a2bab692b2a1c31e",
            "subnet_id": "subnet-02571039cf442c0e1"
          },
          "dependencies": [
            "module.crictracker_private_subnet_az_c.aws_subnet.main",
            "module.crictracker_route_table_private_az_c.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_public_subnet_az_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e30487951511aedd",
            "route_table_id": "rtb-0db5128a7b23cb370",
            "subnet_id": "subnet-077b67cb6983824ae"
          },
          "dependencies": [
            "module.crictracker_public_subnet_az_a.aws_subnet.main",
            "module.crictracker_route_table_public.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_public_subnet_az_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bcbd53716d4fa68",
            "route_table_id": "rtb-0db5128a7b23cb370",
            "subnet_id": "subnet-079a2bebf229cbae2"
          },
          "dependencies": [
            "module.crictracker_public_subnet_az_b.aws_subnet.main",
            "module.crictracker_route_table_public.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_association_public_subnet_az_c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaaeee64f66aef1b",
            "route_table_id": "rtb-0db5128a7b23cb370",
            "subnet_id": "subnet-0b356724e236a1975"
          },
          "dependencies": [
            "module.crictracker_public_subnet_az_c.aws_subnet.main",
            "module.crictracker_route_table_public.aws_route_table.main",
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_private_az_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:route-table/rtb-087178b19d418dfea",
            "id": "rtb-087178b19d418dfea",
            "owner_id": "693583001687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b20f5a5d811b59c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.248.0/21",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-062a187be316ae03d"
              }
            ],
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-a"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_private_az_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:route-table/rtb-07d64df6939a0274d",
            "id": "rtb-07d64df6939a0274d",
            "owner_id": "693583001687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b20f5a5d811b59c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.248.0/21",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-062a187be316ae03d"
              }
            ],
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-b"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_private_az_c",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:route-table/rtb-0a2bab692b2a1c31e",
            "id": "rtb-0a2bab692b2a1c31e",
            "owner_id": "693583001687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b20f5a5d811b59c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.248.0/21",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-062a187be316ae03d"
              }
            ],
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-c"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Private-az-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:route-table/rtb-0db5128a7b23cb370",
            "id": "rtb-0db5128a7b23cb370",
            "owner_id": "693583001687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007aa2c81eab723a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8c9a06aec6fddcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.crictracker_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.crictracker_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:693583001687:vpc/vpc-0f8c9a06aec6fddcb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fc3284d9ac70161",
            "default_route_table_id": "rtb-0af033657179f2d28",
            "default_security_group_id": "sg-0081c75b2d0e40c9e",
            "dhcp_options_id": "dopt-0d9daac518d9ce1d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8c9a06aec6fddcb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af033657179f2d28",
            "owner_id": "693583001687",
            "tags": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker"
            },
            "tags_all": {
              "Author": "Terraform",
              "Contact": "Aman Makwana",
              "Environment": "Production",
              "Name": "crictracker"
            }
          }
        }
      ]
    }
  ]
}